--- a/doc/man/geekcash-cli.1
+++ b/doc/man/geekcash-cli.1
@@ -75,12 +75,13 @@ Timeout during HTTP requests (default: 900)
 Read extra arguments from standard input, one per line until EOF/Ctrl\-D
 (recommended for sensitive information such as passphrases)
 .SH COPYRIGHT
+Copyright (c) 2022			The BlazeGeekCash developers
 Copyright (C) 2014-2018 The Dash Core developers
 Copyright (C) 2009-2018 The Bitcoin Core developers
 
-Please contribute if you find GeekCash useful. Visit <https://geekcash.org> for
+Please contribute if you find BlazeGeekCash useful. Visit <https://www.blazegeek.com> for
 further information about the software.
-The source code is available from <https://github.com/geekcash/geek>.
+The source code is available from <https://github.com/blazegeek/blazegeekcash>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
