--- a/doc/man/geekcashd.1
+++ b/doc/man/geekcashd.1
@@ -673,12 +673,13 @@ option can be specified multiple times
 .IP
 Set the number of threads to service RPC calls (default: 4)
 .SH COPYRIGHT
+Copyright (c) 2022			The BlazeGeekCash developers
 Copyright (C) 2014-2018 The Dash Core developers
 Copyright (C) 2009-2018 The Bitcoin Core developers
 
-Please contribute if you find GeekCash useful. Visit <https://geekcash.org> for
+Please contribute if you find BlazeGeekCash useful. Visit <https://www.blazegeek.com> for
 further information about the software.
-The source code is available from <https://github.com/geekcash/geek>.
+The source code is available from <https://github.com/blazegeek/blazegeekcash>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
