--- a/doc/man/geekcash-tx.1
+++ b/doc/man/geekcash-tx.1
@@ -108,13 +108,13 @@ set=NAME:JSON\-STRING
 .IP
 Set register NAME to given JSON\-STRING
 .SH COPYRIGHT
-Copyright (c) 2022			The BlazeGeekCash developers
+Copyright (c) 2022			The CoinCoin developers
 Copyright (C) 2014-2018 The Dash Core developers
 Copyright (C) 2009-2018 The Bitcoin Core developers
 
-Please contribute if you find BlazeGeekCash useful. Visit <https://www.blazegeek.com> for
+Please contribute if you find CoinCoin useful. Visit <https://www.blazegeek.com> for
 further information about the software.
-The source code is available from <https://github.com/blazegeek/blazegeekcash>.
+The source code is available from <https://github.com/blazegeek/coincoin>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
