--- a/doc/man/geekcashd.1
+++ b/doc/man/geekcashd.1
@@ -43,7 +43,7 @@ testnet:
 .HP
 \fB\-conf=\fR<file>
 .IP
-Specify configuration file (default: geekcash.conf)
+Specify configuration file (default: coincoin.conf)
 .HP
 \fB\-daemon\fR
 .IP
